# HTTP-SERVER

./: .gitignore  CMakeLists.txt  readme.md
examples/: CMakeLists.txt  client.cpp  server.cpp
tcpclient/: CMakeLists.txt  tcpclient.cpp  tcpclient.h
tcpclient/lin/: lin.cpp  lin.h
tcpclient/mac/: mac.cpp  mac.h
tcpclient/win/: win.cpp  win.h
tcpserver/: tcpserver.cpp  tcpserver.h
tcpserver/lin/: lin.cpp  lin.h
tcpserver/mac/: mac.cpp  mac.h
tcpserver/win/: win.cpp  win.h
